--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -12,8 +12,8 @@
         </p>
     {{/if}}
     <div id="cart" data-cart-id="{{cart._id}}" class="container mt-5">
-        <h3 class="text-center">Carrito ID: {{cart._id}}</h3>
         {{#if cart.products.length}}
+            <h3 class="text-center">Recordá revisar el stock de los productos antes de comprar!</h3>
             <div class="row mt-4" style="width: 1000px;">
                 <div class="col">
                     <table class="table">
@@ -24,26 +24,25 @@
                                 <th scope="col">Descripción</th>
                                 <th scope="col">Precio</th>
                                 <th scope="col">Cantidad</th>
+                                <th scope="col">Stock</th>
+                                <th scope="col">Subtotal</th>
                                 <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
                             {{#each cart.products}}
-                            <tr>
+                            <tr data-product-id="{{this.product._id}}">
                                 <td>
                                     <a href="/products/{{product._id}}">
                                         <img class="cartImage" src="{{this.product.thumbnail}}" alt="{{this.product.description}}">
                                     </a>
-                                    
                                 </td>
                                 <td>{{this.product.name}}</td>
                                 <td>{{this.product.description}}</td>
                                 <td>${{this.product.price}}</td>
-                                <td>
-                                    <div class="btn-group" role="group" aria-label="Basic example">
-                                        <span class="mx-2">{{this.quantity}}</span>
-                                    </div>
-                                </td>
+                                <td class="text-center quantity"><strong style="background-color: #dba020; padding: 10px; border-radius:15%">{{this.quantity}}</strong></td>
+                                <td class="text-center stock"><strong style="background-color: #dba020; padding: 10px; border-radius:15%">{{this.product.stock}}</strong></td>
+                                <td>${{calculateSubtotal this.product.price this.quantity}}</td>
                                 <td>
                                     <button type="button" class="btn" onclick="removeFromCart('{{this.product._id}}')"><i class="fa-solid fa-trash-can fa-lg" style="color: #ff0000;"></i></button>
                                 </td>
@@ -53,19 +52,18 @@
                     </table>
                 </div>
             </div>
-            <div class="text-center" style= "justify-content: center; display:flex">
-                <div class="col text-end">
+            <div class="text-center" style= "justify-content: space-around; display:flex">
                     <a class="btn btn-info" href="/products">Seguir Comprando...</a>
-                </div>
-                <div class="col text-end">
                     <button class="btn btn-danger" onclick="emptyCart()">Vaciar carrito</button>
-                </div>
-                <div class="col text-end">
-                    <button class="btn btn-success" onclick="#">Finalizar Compra (no hace nada)</button>
-                </div>
+                    <button id="finalize-purchase" class="btn btn-success">Finalizar Compra</button>
+                    <h3 class="text-end">Total: ${{calculateTotal cart.products}}</h3>
             </div>
         {{else}}
             <h2 class="text-center mt-4">No tienes productos en tu carrito 😓</h2>
+            <br>
+            <h5 class="text-center">
+                Comprar productos en la <a href="/products">Tienda</a>
+            </h5>
         {{/if}}
     </div>
 
