--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -13,78 +13,100 @@
         </button>
 
         <!-- menu colapsable -->
-        <body>
-    {{#if user}}
-        <h3 class="text-center">Bienvenido, 
-            <strong>
-                {{user.first_name}}
-            </strong>
-        </h3>
-    {{else}}
-        <p>
-            Inicia sesión para poder comprar!
-            <a href="/login" class="btn btn-info">Iniciar</a>
-        </p>
-    {{/if}}
-    <div id="cart" data-cart-id="{{cart._id}}" class="container mt-5">
-        <h3 class="text-center">Carrito ID: {{cart._id}}</h3>
-        {{#if cart.products.length}}
-            <div class="row mt-4" style="width: 1000px;">
-                <div class="col">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col"></th>
-                                <th scope="col">Producto</th>
-                                <th scope="col">Descripción</th>
-                                <th scope="col">Precio</th>
-                                <th scope="col">Cantidad</th>
-                                <th scope="col"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {{#each cart.products}}
-                            <tr>
-                                <td>
-                                    <a href="/products/{{product._id}}">
-                                        <img class="cartImage" src="{{this.product.thumbnail}}" alt="{{this.product.description}}">
-                                    </a>
-                                    
-                                </td>
-                                <td>{{this.product.name}}</td>
-                                <td>{{this.product.description}}</td>
-                                <td>${{this.product.price}}</td>
-                                <td>
-                                    <div class="btn-group" role="group" aria-label="Basic example">
-                                        <span class="mx-2">{{this.quantity}}</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn" onclick="removeFromCart('{{this.product._id}}')"><i class="fa-solid fa-trash-can fa-lg" style="color: #ff0000;"></i></button>
-                                </td>
-                            </tr>
-                            {{/each}}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="text-center" style= "justify-content: center; display:flex">
-                <div class="col text-end">
-                    <a class="btn btn-info" href="/products">Seguir Comprando...</a>
-                </div>
-                <div class="col text-end">
-                    <button class="btn btn-danger" onclick="emptyCart()">Vaciar carrito</button>
-                </div>
-                <div class="col text-end">
-                    <button class="btn btn-success" onclick="#">Finalizar Compra (no hace nada)</button>
-                </div>
-            </div>
-        {{else}}
-            <h2 class="text-center mt-4">No tienes productos en tu carrito 😓</h2>
-        {{/if}}
-    </div>
+        <div class="collapse navbar-collapse" id="botonmenu">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/">Inicio</a>
+                </li>
+                {{#if user}}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/products">Productos</a>
+                    </li>
+                {{/if}}
+                {{#if (equals user.role "user")}}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categorías
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item" href="/products/category/Accessories">Accessories</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Books">Books</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Clothing">Clothing</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Electronics">Electronics</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Furniture">Furniture</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Home Appliances">Home Appliances</a></li>
+                            <li><a class="dropdown-item" href="/products/category/Stationery">Stationery</a></li>
+                        </ul>
+                    </li>
+                {{/if}}
+                {{#if (equals user.role "admin")}}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarSuperadminDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dashboard
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarSuperadminDropdownMenuLink">
+                            <li><a class="dropdown-item" href="/adminDashboard">Panel de administración</a></li>
+                            <li><a class="dropdown-item" href="/adminViewAllProducts">Administrar Productos</a></li>
+                            <li><a class="dropdown-item" href="/adminAddProduct">Agregar producto</a></li>
+                            <li><a class="dropdown-item" href="/adminChat">Administrar Usuarios</a></li>
+                            <li><a class="dropdown-item" href="/chat">Moderar Chat</a></li>
+                            <li><a class="dropdown-item" href="/adminPurchases">Ver Compras</a></li>
+                        </ul>
+                    </li>
+                {{/if}}
+            </ul>
 
-    <script src="/js/cart.js"></script>
-</body>
+            <hr class="d-md-none text-white-50">
+
+            <ul class="navbar-nav flex-wrap">
+                {{#if user}}
+                    {{#if (equals user.role "user")}}
+                        <li class="nav-item dropdown btn-outline-secondary">
+                            <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{user.first_name}}
+                                <span class="position-absolute top-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
+                                    <span class="visually-hidden"></span>
+                                </span>
+                                <img src="{{user.profile_image}}" class="profile-image" style="width: 40px; height: 40px">
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item" href="/profile">Ver Perfil</a></li>
+                                <li><a class="dropdown-item" href="/profile/{{user._id}}">Editar Perfil</a></li>
+                                <li><a class="dropdown-item" href="/carts/{{user.cart._id}}">Carrito</a></li>
+                                <li><a class="dropdown-item" href="/chat">Envianos un mensaje!</a></li>
+                                <li><a class="dropdown-item" href="/purchases">Mis compras</a></li>
+                                <li><a class="dropdown-item" href="#"><del>Publicar un producto</del></a></li>
+                                <li><a class="dropdown-item" href="#"><del>Editar un producto</del></a></li>
+                                <li><a class="dropdown-item" href="#"><del>Eliminar un producto</del></a></li>
+                                <li><a class="dropdown-item" href="#"><del>Favoritos</del></a></li>
+                                <li><a class="dropdown-item" href="#"><del>Notificaciones</del></a></li>
+                            </ul>
+                        </li>
+                        <a class="nav-link" href="/carts/{{user.cart._id}}">
+                            <i class="fa-solid fa-cart-shopping fa-lg" style="color: #dba020;"></i>
+                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                {{cart.products.length}}
+                            </span>
+                        </a>
+                        <a style="margin-left: 15px;" class="nav-link" href="/chat"><i class="fa-solid fa-envelope fa-lg" style="color: #dba020;"></i></a>
+                    {{else}}
+                        <a class="nav-link active">
+                            {{user.first_name}}
+                            <span class="position-absolute top-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
+                                <span class="visually-hidden"></span>
+                            </span>
+                            <img src="{{user.profile_image}}" class="profile-image" style="width: 40px; height: 40px">
+                        </a>
+                    {{/if}}
+                    <button class="btn" id="logoutButton"><i class="fa-solid fa-right-from-bracket fa-lg" style="color: #dba020;"></i></button>
+                {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">INICIAR SESIÓN</a>
+                    </li>
+                {{/if}}
+            </ul>
+        </div>
+    </div>  
+</nav>
 
 <script src="/js/logOut.js"></script>
